--- a/Backend/.env
+++ b/Backend/.env
@@ -1,7 +1,7 @@
-DB_HOST='ep-mute-cherry-a1ksg0od.ap-southeast-1.aws.neon.tech'
-DB_NAME='kel11'
-DB_USER='kel11_owner'
-DB_PASSWORD='wvxJWA6tc0uR'
-ENDPOINT_ID='ep-mute-cherry-a1ksg0od'
-DB_PORT='5432'
-PORT="8463"
+DB_HOST='sensor'
+DB_NAME='nama'
+DB_USER='user'
+DB_PASSWORD='pass'
+ENDPOINT_ID='franko'
+DB_PORT='1111'
+PORT="1234"
