--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "framer-motion": "^11.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "framer-motion": "^11.2.9"
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
