--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "framer-motion": "^11.2.9"
+    "framer-motion": "^11.2.10",
+    "react-simple-typewriter": "^5.0.1",
+    "swiper": "^11.1.4",
+    "typewriter-effect": "^2.21.0"
   }
 }
